# fastapi-zero

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  req.txt
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  base.env  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml
{{cookiecutter.project_name}}/backend/: Dockerfile  alembic.ini  backend_pre_start.py  gunicorn_conf.py  prestart.sh  pyproject.toml  start-reload.sh  start.sh  test.py  worker-start.sh
{{cookiecutter.project_name}}/backend/alembic/: env.py
{{cookiecutter.project_name}}/backend/alembic/versions/: 2023-08-18_users.py
{{cookiecutter.project_name}}/backend/email-templates/src/: new_account.mjml  reset_password.mjml
{{cookiecutter.project_name}}/backend/src/: config.py  constants.py  deps.py  main.py  middlewares.py  schemas.py
{{cookiecutter.project_name}}/backend/src/auth/: config.py  constants.py  deps.py  exceptions.py  router.py  schemas.py  service.py  utils.py
{{cookiecutter.project_name}}/backend/src/db/: base.py  dao.py  deps.py  models.py
{{cookiecutter.project_name}}/backend/src/lib/: lifespan.py  logger.py
{{cookiecutter.project_name}}/backend/src/lib/kafka/: deps.py  lifespan.py
{{cookiecutter.project_name}}/backend/src/lib/rabbitmq/: deps.py  lifespan.py
{{cookiecutter.project_name}}/backend/src/lib/redis/: deps.py  lifespan.py
{{cookiecutter.project_name}}/backend/src/lib/taskiq/: lifespan.py  tasks.py  tkq.py
{{cookiecutter.project_name}}/backend/src/utils/: router.py  schemas.py
{{cookiecutter.project_name}}/frontend/: Dockerfile  nginx.conf
